BFA-4181: X icon iphone specific issue fixed

--- a/src/_modal.scss
+++ b/src/_modal.scss
@@ -638,6 +638,16 @@ body.modal-open::-webkit-scrollbar {
 
 .settings-modal-dialog {
   max-height: 100% !important;
+  &.modal {
+    @include allmobiles {
+      .close {
+        @supports (-webkit-touch-callout: none) {
+          /* CSS specific to iOS devices */
+          right: -28px !important;
+        }
+      }
+    }
+  }
 }
 
 .settings-tooltip-dialog {
